// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DualListBox component testing DualListBox 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk TERFW"
  >
    <ul
      class="sc-dTdQuR krPjfj"
    />
    <hr
      class="sc-iayzNI gvQErO"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-groBii enwLeN"
    >
      <div
        class="sc-hLyRwt dpYTil"
      >
        <p
          align="left"
          class="sc-dACwDz eKRaYo"
          color="#041C33"
          font-size="13px"
          lineheight="1.4"
          weight="bold"
        >
          <span
            align="left"
            class="sc-dACwDz NTlVo"
            color="#0B82F4"
            font-size="13px"
            lineheight="1.4"
            weight="bold"
          >
            0 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-iLBnws"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox candidateItems 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk TERFW"
  >
    <ul
      class="sc-dTdQuR krPjfj"
    >
      <li
        class="sc-llIIlC sc-elFkmj QLwQX whCjN"
      >
        <div
          class="sc-fmZSGO izYJGc"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-dHKmnV gfShDr"
          >
            <input
              _size="medium"
              class="sc-kHNKno fVHfnA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-frmfij gsosui"
            >
              foo
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-llIIlC sc-elFkmj QLwQX whCjN"
      >
        <div
          class="sc-fmZSGO izYJGc"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-dHKmnV gfShDr"
          >
            <input
              _size="medium"
              class="sc-kHNKno fVHfnA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-frmfij gsosui"
            >
              bar
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-llIIlC sc-elFkmj QLwQX whCjN"
      >
        <div
          class="sc-fmZSGO izYJGc"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-dHKmnV gfShDr"
          >
            <input
              _size="medium"
              class="sc-kHNKno fVHfnA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-frmfij gsosui"
            >
              hoge
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-llIIlC sc-elFkmj dIDBEm whCjN"
      >
        <div
          class="sc-fmZSGO izYJGc"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-dHKmnV gfShDr"
          >
            <input
              _size="medium"
              class="sc-kHNKno fVHfnA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-frmfij gsosui"
            >
              fuga
            </span>
          </label>
        </div>
      </li>
    </ul>
    <hr
      class="sc-iayzNI gvQErO"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-groBii enwLeN"
    >
      <div
        class="sc-hLyRwt dpYTil"
      >
        <p
          align="left"
          class="sc-dACwDz eKRaYo"
          color="#041C33"
          font-size="13px"
          lineheight="1.4"
          weight="bold"
        >
          <span
            align="left"
            class="sc-dACwDz NTlVo"
            color="#0B82F4"
            font-size="13px"
            lineheight="1.4"
            weight="bold"
          >
            0 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-iLBnws"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox candidateItems and selectedItems 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk TERFW"
  >
    <ul
      class="sc-dTdQuR krPjfj"
    >
      <li
        class="sc-llIIlC sc-elFkmj QLwQX whCjN"
      >
        <div
          class="sc-fmZSGO izYJGc"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-dHKmnV gfShDr"
          >
            <input
              _size="medium"
              checked=""
              class="sc-kHNKno fVHfnA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-frmfij gsosui"
            >
              foo
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-llIIlC sc-elFkmj QLwQX whCjN"
      >
        <div
          class="sc-fmZSGO izYJGc"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-dHKmnV gfShDr"
          >
            <input
              _size="medium"
              checked=""
              class="sc-kHNKno fVHfnA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-frmfij gsosui"
            >
              bar
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-llIIlC sc-elFkmj QLwQX whCjN"
      >
        <div
          class="sc-fmZSGO izYJGc"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-dHKmnV gfShDr"
          >
            <input
              _size="medium"
              checked=""
              class="sc-kHNKno fVHfnA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-frmfij gsosui"
            >
              hoge
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-llIIlC sc-elFkmj dIDBEm whCjN"
      >
        <div
          class="sc-fmZSGO izYJGc"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-dHKmnV gfShDr"
          >
            <input
              _size="medium"
              checked=""
              class="sc-kHNKno fVHfnA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-frmfij gsosui"
            >
              fuga
            </span>
          </label>
        </div>
      </li>
    </ul>
    <hr
      class="sc-iayzNI gvQErO"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-groBii enwLeN"
    >
      <div
        class="sc-hLyRwt dpYTil"
      >
        <p
          align="left"
          class="sc-dACwDz eKRaYo"
          color="#041C33"
          font-size="13px"
          lineheight="1.4"
          weight="bold"
        >
          <span
            align="left"
            class="sc-dACwDz NTlVo"
            color="#0B82F4"
            font-size="13px"
            lineheight="1.4"
            weight="bold"
          >
            4 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-iLBnws"
      >
        <li
          class="sc-eGjrzz bjWLuU"
        >
          foo
          <div
            class="sc-hawdNJ kPTtYZ"
          >
            <button
              class="sc-fGlNzy GWmdm"
              type="button"
            >
              <span
                class="sc-hKDTPf fDKTGa"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-eGjrzz bjWLuU"
        >
          bar
          <div
            class="sc-hawdNJ kPTtYZ"
          >
            <button
              class="sc-fGlNzy GWmdm"
              type="button"
            >
              <span
                class="sc-hKDTPf fDKTGa"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-eGjrzz bjWLuU"
        >
          hoge
          <div
            class="sc-hawdNJ kPTtYZ"
          >
            <button
              class="sc-fGlNzy GWmdm"
              type="button"
            >
              <span
                class="sc-hKDTPf fDKTGa"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-eGjrzz ernFHF"
        >
          fuga
          <div
            class="sc-hawdNJ kPTtYZ"
          >
            <button
              class="sc-fGlNzy GWmdm"
              type="button"
            >
              <span
                class="sc-hKDTPf fDKTGa"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox candidateItems and selectedItems without checkbox 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk TERFW"
  >
    <ul
      class="sc-dTdQuR krPjfj"
    >
      <li
        class="sc-llIIlC sc-kieALA QLwQX bPSaSu"
      >
        <div
          class="sc-gwsNht fPOhQc sc-dibcMh gZjweo"
        >
          <div
            aria-controls="accordion-content-[object Object]"
            aria-expanded="false"
            class="sc-fmZSGO sc-dYOLZc cBdVGE kfEALp"
            display="flex"
            role="button"
            tabindex="0"
          >
            <div
              class="sc-jMpmlX exsuTf"
            >
              <div
                class="sc-kAFUCS jsICPG"
              >
                <div
                  class="sc-fmZSGO eOorNj"
                  display="flex"
                  justifycontent="space-between"
                >
                  bar
                </div>
              </div>
            </div>
            <div
              class="sc-hBDmJg lbSaCt"
            >
              <div
                class="sc-jZhnRx fAkVkv"
              >
                <span
                  class="sc-hKDTPf fDKTGa"
                  size="18"
                >
                  <svg
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                      fill="black"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-kThouk jgSaZu"
            height="0px"
            overflow="hidden"
          >
            <ul
              class="sc-dTdQuR krPjfj"
            >
              <li
                class="sc-llIIlC sc-elFkmj QLwQX whCjN"
              >
                <div
                  class="sc-fmZSGO hjePfa"
                  display="flex"
                  justifycontent="space-between"
                >
                  bar1
                </div>
              </li>
              <li
                class="sc-llIIlC sc-elFkmj dIDBEm whCjN"
              >
                <div
                  class="sc-fmZSGO bTReKN"
                  display="flex"
                  justifycontent="space-between"
                >
                  bar2
                </div>
              </li>
            </ul>
          </div>
        </div>
      </li>
      <li
        class="sc-llIIlC sc-elFkmj QLwQX whCjN"
      >
        <div
          class="sc-fmZSGO kbkihL"
          display="flex"
          justifycontent="space-between"
        >
          hoge
        </div>
      </li>
      <li
        class="sc-llIIlC sc-elFkmj dIDBEm whCjN"
      >
        <div
          class="sc-fmZSGO paUyb"
          display="flex"
          justifycontent="space-between"
        >
          fuga
        </div>
      </li>
    </ul>
    <hr
      class="sc-iayzNI gvQErO"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-groBii enwLeN"
    >
      <div
        class="sc-hLyRwt dpYTil"
      >
        <p
          align="left"
          class="sc-dACwDz eKRaYo"
          color="#041C33"
          font-size="13px"
          lineheight="1.4"
          weight="bold"
        >
          <span
            align="left"
            class="sc-dACwDz NTlVo"
            color="#0B82F4"
            font-size="13px"
            lineheight="1.4"
            weight="bold"
          >
            1 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-iLBnws"
      >
        <li
          class="sc-eGjrzz ernFHF"
        >
          foo
          <div
            class="sc-hawdNJ kPTtYZ"
          >
            <button
              class="sc-fGlNzy GWmdm"
              type="button"
            >
              <span
                class="sc-hKDTPf fDKTGa"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox selectedItems 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk TERFW"
  >
    <ul
      class="sc-dTdQuR krPjfj"
    />
    <hr
      class="sc-iayzNI gvQErO"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-groBii enwLeN"
    >
      <div
        class="sc-hLyRwt dpYTil"
      >
        <p
          align="left"
          class="sc-dACwDz eKRaYo"
          color="#041C33"
          font-size="13px"
          lineheight="1.4"
          weight="bold"
        >
          <span
            align="left"
            class="sc-dACwDz NTlVo"
            color="#0B82F4"
            font-size="13px"
            lineheight="1.4"
            weight="bold"
          >
            4 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-iLBnws"
      >
        <li
          class="sc-eGjrzz bjWLuU"
        >
          foo
          <div
            class="sc-hawdNJ kPTtYZ"
          >
            <button
              class="sc-fGlNzy GWmdm"
              type="button"
            >
              <span
                class="sc-hKDTPf fDKTGa"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-eGjrzz bjWLuU"
        >
          bar
          <div
            class="sc-hawdNJ kPTtYZ"
          >
            <button
              class="sc-fGlNzy GWmdm"
              type="button"
            >
              <span
                class="sc-hKDTPf fDKTGa"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-eGjrzz bjWLuU"
        >
          hoge
          <div
            class="sc-hawdNJ kPTtYZ"
          >
            <button
              class="sc-fGlNzy GWmdm"
              type="button"
            >
              <span
                class="sc-hKDTPf fDKTGa"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-eGjrzz ernFHF"
        >
          fuga
          <div
            class="sc-hawdNJ kPTtYZ"
          >
            <button
              class="sc-fGlNzy GWmdm"
              type="button"
            >
              <span
                class="sc-hKDTPf fDKTGa"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
